@@ -3,12 +3,12 @@ use warnings;
 
 use lib qw{ ./t/lib };
 
-use Test::More tests => 2;
+use Test::More tests => 1;
 use Test::Deep; # (); # uncomment to stop prototype errors
 use Test::Exception;
 
 use Dancer qw(:syntax :tests);
-use Dancer::Plugin::DBIC;
+use Dancer::Plugin::DBIC::Sugar;
 
 eval { require DBD::SQLite };
 plan skip_all => 'DBD::SQLite required to run these tests' if $@;
@@ -24,11 +24,8 @@ set plugins => {
 
 schema->deploy;
 
-BEGIN {
-   use_ok "Dancer::Plugin::DBIC::Sugar";
-}
-
 subtest 'ResultSets are exported' => sub {
+   plan tests => 6;
    can_ok('main','User');
    can_ok('main','Post');
 
@@ -38,6 +35,3 @@ subtest 'ResultSets are exported' => sub {
    is User()->result_class->table, 'user', 'User is using the correct table';
    is Post()->result_class->table, 'post', 'Post is using the correct table';
 };
-
-
-1;
